--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -23,6 +23,7 @@
     "emojisplosion": "^2.6.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "fast-json-patch": "^3.1.1",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
     "highlight.js": "^11.8.0",
