--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 openai = "^0.28.0"
 fastapi = "^0.103.1"
 pydantic = "1.10"
-langchain = "^0.0.309"
+langchain = "0.0.315"
 uvicorn = "^0.23.2"
 tiktoken = "^0.4.0"
 tavily-python = "^0.1.9"
@@ -18,6 +18,7 @@ langserve = "0.0.6"
 sse-starlette = "^1.6.5"
 google-api-python-client = "^2.102.0"
 html2text = "^2020.1.16"
+anthropic = "^0.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
