--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sse-starlette = "^1.6.5"
 google-api-python-client = "^2.102.0"
 html2text = "^2020.1.16"
 anthropic = "^0.4.1"
+kay = "^0.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
