--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ langchain = "^0.0.316"
 uvicorn = "^0.23.2"
 tiktoken = "^0.4.0"
 tavily-python = "^0.1.9"
-langserve = "^0.0.10"
+langserve = {git = "https://github.com/langchain-ai/langserve", rev = "nc/playground", extras = ["server"]}
 sse-starlette = "^1.6.5"
 google-api-python-client = "^2.102.0"
 html2text = "^2020.1.16"
